2011-02-05  vadim  <vadim@netcitadel.com>

	* CompilerDriver_pf.cpp (printStaticOptions): fixes #2038 "pfctl
	error when firewall settings include scrub option for reassembly".
	Command "scrub all reassemble tcp" does not allow direction.
	Tested and verified on OpenBSD 4.2 and FreeBSD 8.1

2011-02-04  vadim  <vadim@netcitadel.com>

	* freebsdInterfaces.cpp (manageIpAddresses): fixes #2032 "support
	for DHCP interfaces in rc.conf mode". Include dynamic interfaces
	inin the list of interfaces generated script manages when the
	script is in rc.conf format. This addds lines similar to
	'ifconfig_em0="DHCP"'.

2011-02-03  vadim  <vadim@netcitadel.com>

	* RoutingCompiler_freebsd_writers.cpp (RoutingRuleToString): fixes
	#2026 Compiler can now generate static routing configuration
	in rc.conf format for FreeBSD.

	* pfAdvancedDialog.cpp (pfAdvancedDialog): fixes #2021 "since
	rc.conf format is only supported for FreeBSD, the option in the
	dialog should not be available for other OS"

2011-02-02  vadim  <vadim@netcitadel.com>

	* OSConfigurator_freebsd.cpp: see #1888 "Add option to generate
	rc.conf.local file for BSD systems". Added ability to generate
	initialization script in rc.conf fromat for FreeBSD. Only FreeBSD
	is currently supported (not OpenBSD). Generated script includes
	variables to configure interfaces and their ipv4 and ipv6
	addresses, vlans, CARP and pfsync interfaces, as well as variables
	that initialize PF.

2011-02-01  vadim  <vadim@netcitadel.com>

	* CompilerDriver_files.cpp (determineOutputFileNames): See #2015
	"Add support for setting names of generated .fw and .conf files
	separately for PF". Added second input field in the "advanced
	settings" dialog, tab "Compiler" for the firewall platform "PF".
	Now user can set the name for both the generated .fw
	initialization script and .conf PF configuration file, as well as
	names for both files on the firewall. Support for this is generic